--- a/app/styles/juku.css
+++ b/app/styles/juku.css
@@ -131,6 +131,10 @@ textarea {
   width: 100%;
 }
 
+.hakemuskausi-panel-ei-kaynnissa {
+  padding-top: 40%;
+}
+
 .hakemuskausi-panel-hakuaika {
   position: absolute;
   line-height: 1;
@@ -146,8 +150,8 @@ textarea {
   margin-top: 5px;
   margin-bottom: 10px;
   vertical-align: middle;
-  margin-left: 90px;
-  margin-right: 90px;
+  margin-left: 40%;
+  margin-right: 40%;
 }
 
 .hakuaika-input {
@@ -156,8 +160,8 @@ textarea {
   font-size: 12px;
   line-height: 1.5;
   border-radius: 3px;
-  margin-left: 25px;
-  margin-right: 45px;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 .juku-datepicker .form-control {
