Hakuohjeen file upload, input type="file" styylattu bootstrap:n näköiseksi

--- a/app/styles/juku.css
+++ b/app/styles/juku.css
@@ -135,6 +135,53 @@ textarea {
   padding-top: 40%;
 }
 
+.hidden-file-input {
+  display: none !important;
+}
+
+.hakemuskausi-file-upload {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.hakemuskausi-file-upload:hover,
+.hakemuskausi-file-upload:focus,
+.hakemuskausi-file-upload.focus,
+.hakemuskausi-file-upload:active,
+.hakemuskausi-file-upload.active,
+.open > .dropdown-toggle.hakemuskausi-file-upload
+{
+  color: #fff;
+  background-color: #286090;
+  border-color: #204d74;
+}
+
+.hakemuskausi-file-upload:active,
+.hakemuskausi-file-upload.active,
+.open > .dropdown-toggle.hakemuskausi-file-upload
+{
+  background-image: none;
+}
+
 .hakemuskausi-panel-hakuaika {
   position: absolute;
   line-height: 1;
