--- a/app/views/hakija/maksatusHakemus.html
+++ b/app/views/hakija/maksatusHakemus.html
@@ -732,14 +732,16 @@
                 <div class="col-md-8">
                   <div ng-show="liitteet.length > 0" class="response">
                     <div class="sel-file" ng-repeat="l in liitteet">
-                      <div ng-show="(hakemus.hakemustilatunnus == 'K')">
+                      <div ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0')">
                         <div ng-show="l.liitenumero!=editoitavaLiite">
                           <p><i class="glyphicon glyphicon-file"></i>
                             <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}" target="_blank">{{l.nimi}}
                               ({{l.contenttype}})</a>
-                            <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Muuta liitenimi" ng-click="asetaEditTilaan(l.liitenumero)"><span
+                            <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Muuta liitenimi"
+                               ng-click="asetaEditTilaan(l.liitenumero)"><span
                               class='glyphicon glyphicon-pencil'></span></a>
-                            <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Poista liite" ng-click="poistaLiite(l.liitenumero)"><span
+                            <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Poista liite"
+                               ng-click="poistaLiite(l.liitenumero)"><span
                               class='glyphicon glyphicon-remove-sign'></span></a>
                           </p>
                         </div>
@@ -751,9 +753,11 @@
                                    ui-validate="{tyhja: 'liiteNimiTyhja($value)' }"/>
                             <a href="" title="Palaa katselutilaan tallentamatta" ng-click="palaaTallentamatta()">
                               <span class='glyphicon glyphicon-eye-open'></span></a>
-                            <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Tallenna liitenimi" ng-click="paivitaLiiteNimi(l.liitenumero,l.nimi)">
+                            <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Tallenna liitenimi"
+                               ng-click="paivitaLiiteNimi(l.liitenumero,l.nimi)">
                               <span class='glyphicon glyphicon-save'></span></a>
-                            <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Poista liite" ng-click="poistaLiite(l.liitenumero)"><span
+                            <a ng-show="sallittu('modify-oma-hakemus')" href="" title="Poista liite"
+                               ng-click="poistaLiite(l.liitenumero)"><span
                               class='glyphicon glyphicon-remove-sign'></span></a>
                           </p>
 
@@ -762,7 +766,8 @@
                             class="help-block">Liitenimi ei saa olla tyhjä.</p>
                         </div>
                       </div>
-                      <div ng-hide="(hakemus.hakemustilatunnus == 'K') && sallittu('modify-oma-hakemus')">
+                      <div
+                        ng-hide="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0') && sallittu('modify-oma-hakemus')">
                         <p><i class="glyphicon glyphicon-file"></i>
                           <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
                             ({{l.contenttype}})</a>
@@ -771,7 +776,8 @@
                     </div>
                   </div>
                 </div>
-                <div ng-show="(hakemus.hakemustilatunnus == 'K') && sallittu('modify-oma-hakemus')">
+                <div
+                  ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0') && sallittu('modify-oma-hakemus')">
                   <div class="col-md-4 text-center">
                     <div ng-file-drop ng-model="myFiles" class="drop-box"
                          drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}"
@@ -793,14 +799,17 @@
         </div>
         <div class="row">
           <div class="col-md-8">
-            <a href="#/"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten päänäkymään</a>
+            <a href="#/h/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
+              päänäkymään</a>
           </div>
           <div class="col-md-2">
-            <div ng-show="(hakemus.hakemustilatunnus == 'K') && sallittu('modify-oma-hakemus')">
+            <div
+              ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0') && sallittu('modify-oma-hakemus')">
               <button data-ng-click="tallennaHakemus()" class="pull-right btn btn-primary">Tallenna tiedot
               </button>
             </div>
-            <div ng-hide="(hakemus.hakemustilatunnus == 'K') && sallittu('modify-oma-hakemus')">
+            <div
+              ng-hide="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0') && sallittu('modify-oma-hakemus')">
               <button data-ng-click="tallennaHakemus()" class="pull-right btn btn-primary" disabled>Tallenna
                 tiedot
               </button>
@@ -837,15 +846,27 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div ng-show="(hakemus.hakemustilatunnus == 'K') && sallittu('allekirjoita-oma-hakemus')">
-              <button data-ng-click="lahetaHakemus()" class="pull-right btn btn-success">Lähetä hakemus</button>
+            <div ng-show="sallittu('allekirjoita-oma-hakemus')">
+              <button ng-show="hakemus.hakemustilatunnus == 'K'" data-ng-click="lahetaHakemus()"
+                      class="pull-right btn btn-success">Lähetä hakemus
+              </button>
+              <button ng-show="hakemus.hakemustilatunnus == 'T0'" data-ng-click="lahetaTaydennys()"
+                      class="pull-right btn btn-success">Lähetä täydennys
+              </button>
+              <button ng-show="hakemus.hakemustilatunnus != 'K' && hakemus.hakemustilatunnus != 'T0'"
+                      data-ng-click="lahetaHakemus()"
+                      class="pull-right btn btn-success" disabled>Lähetä hakemus
+              </button>
             </div>
-            <div ng-hide="(hakemus.hakemustilatunnus == 'K') && sallittu('allekirjoita-oma-hakemus')">
-              <button data-ng-click="lahetaHakemus()" class="pull-right btn btn-success" disabled>Lähetä hakemus
+            <div ng-hide="sallittu('allekirjoita-oma-hakemus')">
+              <button ng-show="hakemus.hakemustilatunnus != 'T0'" data-ng-click="lahetaHakemus()"
+                      class="pull-right btn btn-success" disabled>Lähetä hakemus
+              </button>
+              <button ng-show="hakemus.hakemustilatunnus == 'T0'" data-ng-click="lahetaTaydennys()"
+                      class="pull-right btn btn-success">Lähetä täydennys
               </button>
             </div>
           </div>
-        </div>
       </form>
     </div>
   </div>
