--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -484,7 +484,8 @@
               <div ng-show="liitteet.length > 0" class="response">
                 <div class="sel-file" ng-repeat="l in liitteet">
                   <p><i class="glyphicon glyphicon-file"></i>
-                    <a href="api/hakemus/{{hakemus.id}}/liite/{{l.liitenumero}}" target="_blank">{{l.nimi}} ({{l.contenttype}})</a>
+                    <a href="api/hakemus/{{hakemus.id}}/liite/{{l.liitenumero}}" target="_blank">{{l.nimi}}
+                      ({{l.contenttype}})</a>
                   </p>
                 </div>
               </div>
@@ -519,15 +520,25 @@
           suunnittelunäkymään</a>
       </div>
       <div ng-show="sallittu('kasittely-hakemus')" class=" col-md-6">
-        <div ng-show="(hakemus.hakemustilatunnus == 'V')">
-          <button data-ng-click="tarkastaHakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi
-          </button>
-        </div>
-        <div ng-hide="(hakemus.hakemustilatunnus == 'V')">
-          <button data-ng-click="tarkastaHakemus()" class="pull-right btn btn-success" disabled>Merkitse
-            tarkastetuksi
-          </button>
-        </div>
+        <button ng-show="(hakemus.hakemustilatunnus == 'V')" data-ng-click="tarkastaHakemus()"
+                class="pull-right btn btn-success">Merkitse tarkastetuksi
+        </button>
+        <button ng-show="(hakemus.hakemustilatunnus == 'TV')" data-ng-click="tarkastaHakemus()"
+                class="pull-right btn btn-success">Merkitse tarkastetuksi (täydennys)
+        </button>
+        <button ng-show="(hakemus.hakemustilatunnus == 'V' || hakemus.hakemustilatunnus == 'TV')"
+                data-ng-click="taydennyspyynto()"
+                class="pull-right btn btn-danger">Täydennyspyyntö
+        </button>
+        <button ng-hide="(hakemus.hakemustilatunnus == 'V' || hakemus.hakemustilatunnus == 'TV')"
+                data-ng-click="tarkastaHakemus()"
+                class="pull-right btn btn-success" disabled>Merkitse
+          tarkastetuksi
+        </button>
+        <button ng-hide="(hakemus.hakemustilatunnus == 'V' || hakemus.hakemustilatunnus == 'TV')"
+                data-ng-click="taydennyspyynto()"
+                class="pull-right btn btn-danger" disabled>Täydennyspyyntö
+        </button>
       </div>
     </div>
   </div>
