--- a/app/styles/juku.css
+++ b/app/styles/juku.css
@@ -135,6 +135,13 @@ textarea {
   padding-top: 40%;
 }
 
+.hakemuskausi-vuosi {
+  color: #0067ce;
+  padding-top: 40px;
+  font-size: 60px;
+  font-weight: bolder;
+}
+
 .hidden-file-input {
   display: none !important;
 }
@@ -185,11 +192,22 @@ textarea {
 .hakemuskausi-panel-hakuaika {
   position: absolute;
   line-height: 1;
-  bottom: 10px;
-  text-align: center;
-  padding: 25px;
+  bottom: 30px;
   width: 100%;
+  right:15px;
 }
+
+.hakemuskausi-panel-hakuaikatoiminnot {
+  position: absolute;
+  top: 340px;
+  padding-left: 20px;
+  text-align: left;
+  width: 100%;
+  color: #000000 !important;
+  font-size: 14px;
+  font-weight: bolder;
+}
+
 .hakemuskausi-panel-hakuaika-viiva{
   border: 0;
   height: 1px;
