LIVIJUKU-170: Nappuloiden nimet päivitetty

--- a/app/views/hakija/maksatusHakemus.html
+++ b/app/views/hakija/maksatusHakemus.html
@@ -851,7 +851,7 @@
                       class="pull-right btn btn-success">Lähetä hakemus
               </button>
               <button ng-show="hakemus.hakemustilatunnus == 'T0'" data-ng-click="lahetaTaydennys()"
-                      class="pull-right btn btn-success">Lähetä täydennys
+                      class="pull-right btn btn-success">Lähetä täydennetty hakemus
               </button>
               <button ng-show="hakemus.hakemustilatunnus != 'K' && hakemus.hakemustilatunnus != 'T0'"
                       data-ng-click="lahetaHakemus()"
@@ -863,7 +863,7 @@
                       class="pull-right btn btn-success" disabled>Lähetä hakemus
               </button>
               <button ng-show="hakemus.hakemustilatunnus == 'T0'" data-ng-click="lahetaTaydennys()"
-                      class="pull-right btn btn-success">Lähetä täydennys
+                      class="pull-right btn btn-success">Lähetä täydennetty hakemus
               </button>
             </div>
           </div>
